--- a/Week9/Case05/index.html
+++ b/Week9/Case05/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaseStudy02</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -19,6 +19,7 @@
               <li><a href="menu.php">Menu</a></li>
               <li><a href="music.html">Music</a></li>
               <li><a href="jobs.html">Jobs</a></li>
+              <br><br>
               <li><a href="update_pricing.php">Update Pricing</a></li>
               <li><a href="sales_report.php">Sales Report</a></li>
             </ul>
