--- a/Week9/Case05/jobs.html
+++ b/Week9/Case05/jobs.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaseStudy02</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script type="text/javascript" src="jobs.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="text/javascript" src="./js/jobs.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
@@ -20,6 +20,7 @@
               <li><a href="menu.php">Menu</a></li>
               <li><a href="music.html">Music</a></li>
               <li><a href="jobs.html" class="active-home">Jobs</a></li>
+              <br><br>
               <li><a href="update_pricing.php">Update Pricing</a></li>
               <li><a href="sales_report.php">Sales Report</a></li>
             </ul>
